<resources>
    <string name="app_name">Lite Messenger</string>
    <string name="edit_text_login_hint">Enter login…</string>
    <string name="edit_text_password_hint">Enter password…</string>
    <string name="edit_text_email_hint">Enter email…</string>
    <string name="check_box_rememberme">Remember Me</string>
    <string name="button_register">Register</string>
    <string name="button_login">Login</string>
    <string name="button_logout">Logout</string>
    <string name="button_enter">Enter</string>
    <string name="button_register_now">Nothing account? Register!</string>
    <string name="edit_text_enter_login_hint">Enter login or email</string>
    <string name="button_rePassword">Enter password again</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logout_menu">Logout</string>
    <string name="about_dev_menu">About dev</string>

    <string name="user_name_dialog_panel">Кому: </string>

</resources>
