<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/editTextLogin"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"

        android:hint="@string/button_login" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="230dp"
        android:hint="@string/edit_text_password_hint"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/ediTextRePassword"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="290dp"
        android:hint="@string/button_rePassword"
        android:inputType="textPassword" />




    <Button
        android:id="@+id/buttonSubmitRegister"
        style="@style/my_button"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="370dp"
        android:text="@string/button_register" />

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/editTextPassword"
        android:layout_alignStart="@+id/editTextLogin"
        android:layout_marginBottom="-210dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:hint="@string/edit_text_email_hint" />

</RelativeLayout>