<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
   >

    <EditText
        android:layout_marginTop="150dp"
        android:layout_centerHorizontal="true"
        android:id="@+id/editTextLoginInput"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:hint="@string/edit_text_enter_login_hint"/>
    <EditText
        android:id="@+id/editTextPasswordInput"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="230dp"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/edit_text_password_hint"/>
    <Button
        android:id="@+id/buttonRegisterNow"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="300dp"
        android:text="@string/button_register_now" />
    <Button
        android:id="@+id/buttonSubmitLogin"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="350dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/my_button"
        android:text="@string/button_enter"/>
</RelativeLayout>




